Terminada la pagina empresa

--- a/Paginas/Empresa.html
+++ b/Paginas/Empresa.html
@@ -43,6 +43,19 @@
 
     </header>
 
+    <main class="container">
+
+        <section class="row">
+  
+          <h1 class="col-12 text-center">Empresa</h1>
+  
+          <p class="col-12 caja__texto">Repuestos Roca, se sigue esforzando por mejorar la calidad de atención y servicio a sus clientes, ampliando su Stock e invirtiendo en tecnología con la obtención de los catálogos electrónicos para los modelos 0Km. ambién publicando sus artículos más antiguos en Internet, contamos con la más variada gama de productos originales y alternativos, en todos sus colores y materiales.Todos los repuestos de modelos RENAULT y VOLKSWAGEN están a su disposición. Nos caracteriza la variedad de productos, por sobretodo un amplio stock</p>
+  
+        </section>
+
+        <img class="img-fluid" src="../Imagenes/VW.jpg" alt="Publicidad Repuestos Roca">
+
+    </main>
     <footer >
 
         <div class="row">
