--- a/Paginas/Marcas.html
+++ b/Paginas/Marcas.html
@@ -43,6 +43,24 @@
 
     </header>
 
+    <main >
+        
+        <h1 class="text-center">Marcas</h1>
+
+        <div class="d-flex flex-row flex-wrap justify-content-center">
+            <img src="../Imagenes/Logo-Continental.png" alt="" class="col-lg-2 col-md-4 col-sm-6">
+            <img src="../Imagenes/Logo-Fabila.png" alt="" class="col-lg-3 col-md-4 col-sm-6">
+            <img src="../Imagenes/Logo-Gates.png" alt="" class="col-lg-2 col-md-4 col-sm-6">
+            <img src="../Imagenes/Logo-Ina.png" alt="" class="col-lg-3 col-md-4 col-sm-6">
+            <img src="../Imagenes/Logo-Luk.png" alt="" class="col-lg-2 col-md-4 col-sm-6">
+            <img src="../Imagenes/Logo-Monroe.png" alt="" class="col-lg-4 col-md-4 col-sm-6">
+            <img src="../Imagenes/Logo-SKF.png" alt="" class="col-lg-4 col-md-4 col-sm-6">
+            <img src="../Imagenes/Logo-Thompson.png" alt="" class="col-lg-4 col-md-4 col-sm-6">
+            <img src="../Imagenes/Log-Valeo.png" alt="" class="col-lg-4 col-md-4 col-sm-6">
+            <img src="../Imagenes/Logo-Hutchinson.png" alt="" class="col-lg-4 col-md-4 col-sm-6">
+        </div>
+    </main>
+
     <footer >
 
         <div class="row">
