pagina contacto terminada

--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -43,6 +43,58 @@
 
     </header>
 
+    <main class="container">
+
+        <div class="row">
+
+            <div class="col-lg-3 col-md-4 col-sm-12 text-center">
+
+                <h3>Lineas rotativas</h3>
+                <p>5365-9605</p>
+
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-sm-12 text-center">
+
+                <h3>Whatsapp</h3>
+                <p>11-6458-3936</p>
+
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-sm-12 text-center">
+
+                <h1>Mail</h1>
+                <p>repuestosroca@hotmail.com</p>
+            </div>
+
+            <div class="col-lg-3 col-md-12 text-center">
+                <iframe class="img-fluid" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13140.390573537434!2d-58.6446683!3d-34.5763958!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x30abfc8bed651363!2sRepuestos%20Roca!5e0!3m2!1ses!2sar!4v1653666422204!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p>Av. Roca 2498, Hurlingham</p>
+            </div>
+
+        </div>
+        
+        <div class="row">
+
+            <div class="col-12">
+
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Direccion de mail</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="direccion@mail.com">
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Tu nombre">
+                  <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  </div>
+
+            </div>
+
+        </div>
+    </main>
+
     <footer>
         <footer >
 
