--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
 
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg bg-light fondo__blanco">
         <div class="container-fluid">
           <!--Uso la clase img-fluid en la foto de la portada para que funcione el resposive del header-->
           <a class="navbar-brand" href="index.html"><img class="img-fluid" src="Imagenes/03.png" alt="Logo de Repuestos Roca"></a>
