--- a/Paginas/Marcas.html
+++ b/Paginas/Marcas.html
@@ -12,14 +12,14 @@
 
     <header>
 
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg bg-light fondo__blanco">
         <div class="container-fluid">
           <!--Uso la clase img-fluid en la foto de la portada para que funcione el resposive del header-->
           <a class="navbar-brand" href="../index.html"><img class="img-fluid" src="../Imagenes/03.png" alt="Logo de Repuestos Roca"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
